fix: submenu alignment

--- a/assets/css/give-admin-rtl.css
+++ b/assets/css/give-admin-rtl.css
@@ -1118,7 +1118,7 @@ ASIDE
     display: block;
     position: absolute;
     bottom: 0;
-    right: 170px;
+    right: 166px;
     width: 170px;
     max-height: 250px;
     overflow-y: scroll; }
