--- a/assets/css/give-admin.css
+++ b/assets/css/give-admin.css
@@ -1118,7 +1118,7 @@ ASIDE
     display: block;
     position: absolute;
     bottom: 0;
-    left: 170px;
+    left: 166px;
     width: 170px;
     max-height: 250px;
     overflow-y: scroll; }
